# python-project-52

./: .codeclimate.yml  .env  .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  setup.cfg
task_manager/: db.sqlite3  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  mixins.py  models.py  urls.py  utils.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_created_at.py
task_manager/labels/tests/: labels_test_client.py  test_create.py  test_delete.py  test_labels.py  test_update.py
task_manager/staticfiles/: staticfiles.json
task_manager/statuses/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: user.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at.py
task_manager/statuses/tests/: statuses_test_client.py  test_create.py  test_delete.py  test_statuses.py  test_update.py
task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/tasks/: filters.py  mixins.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/tasks/fixtures/: statuses.json  task.json  user.json
task_manager/tasks/migrations/: 0001_initial.py  (+13 more)
task_manager/templates/: delete.html  index.html  labels.html  signin.html  signup.html  statuses.html  tasks.html  update_user.html  users.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/utils/: custom_test_client.py  test_utils.py
(+46 files in other folders)
