[tool.poetry]
name = "python-project-52"
version = "0.1.0"
description = "task manager"
authors = ["nickolay_kuzmin <nickolay.kuzmin2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
dj-database-url = "^2.0.0"
django-bootstrap5 = "^23.3"
django-filter = "^23.3"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
psycopg2-binary = "^2.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
