[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = ["nickolay_kuzmin <nickolay.kuzmin2001@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.7"
dj-database-url = "^2.0.0"
django-bootstrap5 = "^23.3"
django-filter = "^23.3"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
psycopg2-binary = "^2.9.8"
rollbar = "^0.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
